# GPU-Project

./: CMakeLists.txt  README.md
include/: benchmark.h  bfs_help_functions.h
src/: bfs_help_functions.cu  paralell_bfs_device.cu  paralell_bfs_host.cu
